--- a/global-forms.45.scss
+++ b/global-forms.45.scss
@@ -179,7 +179,7 @@ input {
         position: absolute;
         z-index: -1;
 
-        @if (get_theme(version) == 1) {
+        @if ($socialstack_theme_version == 1) {
             + label {
                 @include base_button_styling();
                 //@include primary_button_styling();
