Added some extra injection points so the layout of peers can be customised without forking the whole component

--- a/Peers/Peers.scss
+++ b/Peers/Peers.scss
@@ -68,7 +68,7 @@ $meeting_padding_top: 3rem;
 	}
 }
 
-.peers {
+.videoChat .peers {
 
 	.nobody-else{
 		text-align: center;
@@ -252,7 +252,7 @@ html.device-mobile {
 
 	@media only screen and (orientation: landscape) {
 
-		.peers {
+		.videoChat .peers {
 			padding-left: 280px;
 			min-height: 0;
 		}
