--- a/Photosphere.scss
+++ b/Photosphere.scss
@@ -2,25 +2,14 @@
 	position: relative;
 	opacity: 0;
 	
-	canvas{
+	> canvas{
 		width: 100%;
 		height: 100%;
 		border: 0;
 		margin: 0;
 		display: block;
-	}
-
-	video,canvas,#test{
 		position: absolute;
 		top: 0;
-	}
-
-	video{
-		min-width: 100%;
-		min-height: 100%;
-		border: 0;
-		margin: 0;
-		display: block;
 	}
 	
 	transition: opacity 1s;
