Much nicer UX, including a delete button and support for modern web image formats

--- a/file-selector.scss
+++ b/file-selector.scss
@@ -1,5 +1,11 @@
-.image-select-modal{
-	.image{
-		margin: 10px;
+.file-selector{
+	.image-select-modal{
+		.image{
+			margin: 10px;
+		}
+	}
+
+	.delete-file-btn{
+		margin-left: 10px;
 	}
 }
