--- a/VideoChat3D.scss
+++ b/VideoChat3D.scss
@@ -3,6 +3,15 @@
 	.peer-3d{
 		width: 100px;
 		height: 100px;
+		
+		.peerView{
+			overflow: initial;
+			
+			>.info{
+				top: initial !important;
+				bottom: -80px;
+			}
+		}
 	}
 	
 }
