--- a/global-variables.5.scss
+++ b/global-variables.5.scss
@@ -338,6 +338,10 @@ $socialstack_default_tooltips: (
 
 $base_font_size: 16 !default; // in px
 
+@function px_to_em($px) {
+    @return 0em + $px / $base_font_size;
+}
+
 @function px_to_rem($px) {
     @return 0rem + $px / $base_font_size;
 }
