--- a/MessageCreate/MessageCreate.scss
+++ b/MessageCreate/MessageCreate.scss
@@ -13,7 +13,7 @@
 			margin-bottom: 16px;
 
 			border-radius: 8px;
-			border: 1px solid #b48c41;
+			border: 1px solid grey;
 
 			line-height: 1.25rem !important;
 			font-size: 0.875rem !important;
