added CanClaim support to LiveSupport.js

--- a/LiveSupport.scss
+++ b/LiveSupport.scss
@@ -1,5 +1,11 @@
 .live-support-admin {
 
+	.paginator {
+		.active {
+			color: #007bff;
+		}
+	}
+
 	.messages-navigation {
 
 		.meeting-requests {
