Added chat claim support in MessageCreate.js and MessageList so that the prop can be passed to MessageCreate.js.

--- a/MessageCreate/MessageCreate.scss
+++ b/MessageCreate/MessageCreate.scss
@@ -24,7 +24,12 @@
 			}
 		}
 
+		.success {
+			background-color: #28a745
+		}
+		
 		.send-message {
+			
 			/*
 			position: absolute;
 			bottom: 1rem;
