Added orNone checks in ChatList and added more message type handling into LiveSupport.js.

--- a/ChatList/ChatList.scss
+++ b/ChatList/ChatList.scss
@@ -107,6 +107,13 @@
 	
 	.paginator{
 		margin-top: 1em;
+		.pagination {
+			.active {
+				.page-link {
+					color: #007bff;
+				}
+			}
+		}
 	}
 	
 }
