Added exclusion dates to calendar in addition to re positioned validation error.

--- a/MessageCreate/MessageCreate.scss
+++ b/MessageCreate/MessageCreate.scss
@@ -1,6 +1,11 @@
 .livesupport {
 	.message-create {
 
+		.validation-error {
+			margin-top: 5px;
+			margin-bottom: 5px;
+		}
+
 		textarea {
 			/*
 			border: 0;
