--- a/image.scss
+++ b/image.scss
@@ -10,4 +10,15 @@
 			width: 100%;
 		}
 	}
+
+	&.image-left {
+		float: left;
+		margin: .5rem .5rem .5rem 0;
+	}
+
+	&.image-right {
+		float: right;
+		margin: .5rem 0 .5rem .5rem ;
+	}
+
 }
