--- a/auto-form.scss
+++ b/auto-form.scss
@@ -13,10 +13,6 @@
 	}
 
 	// #9960: hacks to get save / delete options docked to bottom of screen
-	> form {
-		margin-bottom: 3rem;
-	}
-
 	.auto-form-footer {
 	    padding: 1rem;
 		position: fixed;
@@ -25,6 +21,7 @@
 		left: 0;
 		background: #fff;
 		box-shadow: 0 -3px 5px rgba(0,0,0,.1);
+		z-index: 1;
 	}
 
 	.auto-form-create-options {
@@ -32,5 +29,6 @@
 		bottom: 0;
 		padding: 1rem;
 		margin-left: -1rem;
+		z-index: 2;
 	}
 }
